[gd_scene load_steps=9 format=4 uid="uid://cwqptqim1mo5y"]

[ext_resource type="Script" uid="uid://1nfopdhobfi8" path="res://Enitidades/MapAssets/flying_enemy.gd" id="1_7dmgp"]
[ext_resource type="Animation" uid="uid://b6826slposlb2" path="res://Enitidades/MapAssets/Animations/Volar.res" id="1_e4gwj"]
[ext_resource type="Animation" uid="uid://oq3vj4m6438t" path="res://Enitidades/MapAssets/Animations/Volar y Atacar.res" id="2_7dmgp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7dmgp"]

[sub_resource type="ArrayMesh" id="ArrayMesh_phgpe"]
resource_name = "Texturizado_Caramelo_Volador_002_Cube_002"
_surfaces = [{
"aabb": AABB(-0.650181, 0.272518, -1.48444, 1.30036, 1.2385, 2.96888),
"attribute_data": PackedByteArray("AAAAPwAAYD8AAMA+AABAPwAAID8AAIA/AADAPgAAgD/K1Qg/y9UoP2pU7j7L1Sg/ytUIPzYqFz8AAMA+AAAAP2xU7j41Khc/AAAgPwAAAD8AAAA/AADAPgAAID8AAIA+AABgPwAAgD4AAMA+AACAPgAAAD4AAAA/AAAAPgAAgD5qVO4+MFcjPgAAwD4AAAAAytUIPzBXIz5sVO4+qFG5PcrVCD+wUbk9AAAgPwAAAADK1Qg/sFG5PcrVCD+wUbk9bFTuPqhRuT1sVO4+qFG5PcrVCD/L1Sg/ytUIPzYqFz/K1Qg/NioXP8rVCD/L1Sg/alTuPjBXIz7K1Qg/MFcjPsrVCD8wVyM+alTuPjBXIz7K1Qg/NioXP2xU7j41Khc/bFTuPjUqFz/K1Qg/NioXP8rVCD8wVyM+alTuPjBXIz5sVO4+qFG5PcrVCD+wUbk9ytUIP8vVKD9qVO4+y9UoP2xU7j41Khc/ytUIPzYqFz9sVO4+NSoXP2pU7j7L1Sg/alTuPsvVKD9sVO4+NSoXP8rVCD8wVyM+ytUIP7BRuT3K1Qg/sFG5PcrVCD8wVyM+bFTuPqhRuT1qVO4+MFcjPmpU7j4wVyM+bFTuPqhRuT1qVO4+y9UoP8rVCD/L1Sg/ytUIP8vVKD9qVO4+y9UoPwAAAD8AAGA/AAAgPwAAQD8AACA/AABgPwAAAD8AAEA/AAAAP6Bxnz0AAAA/AAAAPmxU7j6oUbk9ytUIP7BRuT0AACA/AACAPgAAID8AAMA+AAAAPwAAgD4AAMA+AAAAP2nc5z4AACA/AADAPgAAID8AAAA/AAAAPwAAAD807hM/AACAPgAAwD4AAMA+AADAPgAAgD4AAIA+AABAPwAAwD4AAGA/AADAPgAAQD8AAIA+AAAgPwAAwD4AAEA/AACAPgAAQD8AAMA+AABAPwAAwD4AAEA/AAAAPwAAID8AAMA+AABAPwAAAD8AAGA/AADAPgAAYD8AAAA/AABAPwAAwD4AAAA+AADAPgAAgD4AAIA+AACAPgAAwD4AAIA+AADAPgAAgD4AAAA/AAAAPgAAwD4AAIA+AAAAPwAAwD4AAMA+AACAPgAAwD4AAAA/KEcwPgAAID8AAIA+AAAAPwAAgD7MEQw/AAAAPgAAID8AAAA+AAAAPwAAAAAAAAA/oHGfPQAAID8AAAA+zBEMPwAAAD4AAMA+AAAAPgAAAD8AAIA+AADAPgAAgD5p3Oc+AAAAPgAAAD8sRzA+AADAPgAAwD4AAAA/AACAPgAAAD8AAMA+AADAPgAAgD4AAMA+AAAAPwAAAD8AAMA+AAAAPwAAAD8AAMA+AADAPgAAAD8AAAA/AAAgPwAAwD4AACA/AAAAPwAAAD8AAMA+AAAAP8wRLD8AACA/AABAPwAAAD8AAEA/zBEMPwAAID8AACA/AAAgPwAAAD8AAAA/AAAAPzTuEz8AACA/AAAgPwAAID8AAAA/zBEMPwAAID8AAMA+AAAgPwAAAD8AAEA/adznPgAAID8AAAA/zBEsPwAAwD4AAGA/AAAAPwAAQD8AAAA/AABgPwAAwD4AAEA/AAAAPwAAYD8AAAA/AACAPwAAwD4AAGA/AAAAPwAAgD8AACA/AABgPwAAAD8oRzA+AAAAPyhHMD4AAAA/oHGfPQAAAD+gcZ89zBEMPwAAID/MEQw/AAAgPwAAAD8sRzA+AAAAPyxHMD4AAAA/NO4TPwAAAD807hM/AAAAP8wRLD8AAAA/zBEsP2nc5z4AAAA+adznPgAAAD4AAAA/NO4TPwAAAD807hM/adznPgAAAD4AAMA+AAAAPgAAAD8AAAAAAAAAP6Bxnz1p3Oc+AAAAPgAAAD8AAAA+AAAAPyhHMD4AAAA/AAAAPsrVCD8wVyM+alTuPjBXIz7MEQw/AAAAPgAAAD8AAAA+AAAAPzTuEz8AAAA/AAAgP2xU7j41Khc/ytUIPzYqFz9p3Oc+AAAgPwAAAD8AACA/AAAAP8wRLD8AAAA/AAAgP8rVCD/L1Sg/alTuPsvVKD/MEQw/AAAgPwAAAD8AACA/zBEMPwAAID/MEQw/AAAgPwAAAD+gcZ89AAAAP6Bxnz1p3Oc+AAAgP2nc5z4AACA/adznPgAAID9p3Oc+AAAgP8wRDD8AAAA+zBEMPwAAAD7MEQw/AAAAPswRDD8AAAA+adznPgAAAD5p3Oc+AAAAPgAAAD/MESw/AAAAP8wRLD8="),
"bone_aabbs": [AABB(-0.650181, 0.272518, -0.61172, 1.30036, 1.2385, 1.22344), AABB(-0.650181, 0.272518, -1.48444, 1.30036, 1.2385, 1.97434), AABB(-0.650181, 0.272518, -0.489898, 1.30036, 1.2385, 1.97434)],
"format": 34359745559,
"index_count": 336,
"index_data": PackedByteArray("PgA/AEAAPgBBAD8AQgBDAEQAQgBFAEMACgBGAEcACgBIAEYASQBKAEsASQAIAEoACABJAEwACABMAE0ATgANAE8ATgBQAA0AUQAMAFIAUQBTAAwAVABVAFYAVAALAFUACQBXAFgACQBZAFcAWgBbAFwAWgBdAFsAXgBfAGAAXgAPAF8ADgBhAGIADgBjAGEAZABlAAcAZABmAGUAZwBoAGkAEgBoAGcAaAASAGoAaABqAGsAbAAUAG0AFABsAG4AbgBsABUAFABuAG8AcABxAHIAcQBwABAAEABwAHMAcQAQAHQAdQB2AHcAdQB4AHYAeQB6AHsAeQB8AHoAfQB+AH8AfQCAAH4AgQCCAIMABACCAIEAggAEAIQAggCEAIUAhgAGAIcABgCGAIgAiACGAIkABgCIAIoAiwCMAAEAjACLAAUABQCLAI0AjAAFAI4AjwCQAJEAjwCSAJAAAwCTAJQAAwCVAJMAlgCXAAIAlgAAAJcAmAAfACAAmACZAB8AFgCaAJsAFgAXAJoAGgCcAJ0AGgAdAJwAHgCeAJ8AHgAhAJ4AoAAjACQAoAChACMAogA7ADwAogCjADsApAA3ADgApAClADcAIgCmAKcAIgAlAKYAEQCoAKkAEQATAKgAEwARAKoAEwCqAKsArACtACcArAAoAK0ArgCvALAArgCxAK8AsgCzACkAsgAmALMAtAC1ALYAtAC3ALUAuAC5ACsAuAAsALkAugC7ALwAugC9ALsAvgC/AC0AvgAqAL8AwAAbABwAwADBABsAwgAZABgAwgDDABkALgDEAMUALgAxAMQAxgAvADAAxgDHAC8AMgDIAMkAMgA1AMgAygAzADQAygDLADMANgDMAM0ANgA5AMwAOgDOAM8AOgA9AM4A"),
"lods": [0.343152, PackedByteArray("AAABAAIAAwABAAAAAwAAAAIABAACAAEAAQAFAAQAAgAEAAYABwAFAAEABwAIAAUABwAGAAgAAgAGAAkABgAHAAkABwAKAAkACQALAAwACgALAAkABwANAAoADgANAAcADgAPAA0ACgANABAAEQAQAA0ACgAQABIAEgALAAoAEQATABAACwASABQAEQAUABMACwAUABUAFAARABUAFgAXABgAGAAXABkAGgAbABwAGgAdABsAHgAfACAAHgAhAB8AIgAjACQAIgAlACMAJgAnACgAKQAmACgAKgArACwALQAqACwALgAvADAALgAxAC8AMgAzADQAMgA1ADMANgA3ADgANgA5ADcAOgA7ADwAOgA9ADsA")],
"material": SubResource("StandardMaterial3D_7dmgp"),
"name": "m_CarameloVolador",
"primitive": 3,
"skin_data": PackedByteArray("AAABAAIAAAC+7g8MMQUAAAAAAAAAAAAA//8AAAAAAAAAAAIAAQAAAIj/bgAHAAAAAAACAAAAAADt/xEAAAAAAAAAAQAAAAAAW4qjdQAAAAAAAAEAAAAAACeL13QAAAAAAAABAAAAAAAEi/p0AAAAAAAAAAAAAAAA//8AAAAAAAAAAAEAAAAAAIKKfHUAAAAAAAACAAAAAADm/xgAAAAAAAAAAQACAAAA5unJC04KAAAAAAEAAAAAAJD/bgAAAAAAAAACAAEAAACI/24ABwAAAAAAAgAAAAAA9/8HAAAAAAAAAAAAAAAAAP//AAAAAAAAAAACAAAAAADt/xEAAAAAAAAAAgAAAAAACo/0cAAAAAAAAAIAAAAAAO3/EQAAAAAAAAACAAAAAABxjo1xAAAAAAAAAgAAAAAAi45zcQAAAAAAAAIAAAAAAPmMBXMAAAAAAAACAAEAAACI/24ABwAAAAAAAgAAAAAA+YwFcwAAAAACAAAAAAAAAP//AAAAAAAAAAACAAAAAACLjnNxAAAAAAIAAAAAAAAA//8AAAAAAAAAAAEAAAAAAFuKo3UAAAAAAQAAAAAAAAD//wAAAAAAAAAAAQAAAAAABIv6dAAAAAABAAAAAAAAAP//AAAAAAAAAAACAAAAAAAKj/RwAAAAAAIAAAAAAAAA//8AAAAAAAAAAAIAAAAAAHGOjXEAAAAAAgAAAAAAAAD//wAAAAAAAAAAAQAAAAAABIv6dAAAAAABAAAAAAAAAP//AAAAAAAAAAABAAAAAACCinx1AAAAAAEAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAAAAQAAAAAAgop8dQAAAAABAAAAAAAAAP//AAAAAAAAAAABAAAAAAAni9d0AAAAAAEAAAAAAAAA//8AAAAAAAAAAAIAAAAAAHGOjXEAAAAAAgAAAAAAAAD//wAAAAAAAAAAAgAAAAAA+YwFcwAAAAACAAAAAAAAAP//AAAAAAAAAAACAAAAAACLjnNxAAAAAAIAAAAAAAAA//8AAAAAAAAAAAIAAAAAAAqP9HAAAAAAAgAAAAAAAAD//wAAAAAAAAAAAQAAAAAAJ4vXdAAAAAABAAAAAAAAAP//AAAAAAAAAAABAAAAAABbiqN1AAAAAAEAAAAAAAAA//8AAAAAAAAAAAEAAgAAAL7uDwwxBQAAAAABAAAAAADm/xgAAAAAAAAAAQACAAAA0PavBn4CAAAAAAIAAQAAAGzxNghbBgAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAAAAQAAAAAAkP9uAAAAAAAAAAIAAQAAAMn3rASIAwAAAAACAAAAAAAr/tMBAAAAAAAAAAAAAAAA//8AAAAAAAAAAAEAAAAAAOKIHHcAAAAAAAABAAIAAABs9MkFyQUAAAAAAQACAAAAbPE2CFsGAAAAAAEAAAAAAL2JQXYAAAAAAAABAAIAAACd/bQBrAAAAAAAAQACAAAAvPczBg8CAAAAAAIAAAAAAH//fwAAAAAAAAABAAIAAABn+8oCzQEAAAAAAQACAAAA0PavBn4CAAAAAAIAAQAAAKP2rQStBAAAAAACAAEAAADJ96wEiAMAAAAAAgABAAAAo/atBK0EAAAAAAEAAgAAAGf7ygLNAQAAAAABAAIAAABn+8oCzQEAAAAAAQACAAAA3O0RCREJAAAAAAIAAQAAAMn3rASIAwAAAAABAAIAAADc7REJEQkAAAAAAQACAAAA0PavBn4CAAAAAAEAAAAAAOb/GAAAAAAAAAABAAIAAABn+8oCzQEAAAAAAQACAAAAtvwlAyIAAAAAAAIAAAAAAH//fwAAAAAAAAABAAIAAACd/bQBrAAAAAAAAQACAAAAnf20AawAAAAAAAEAAgAAAGz0yQXJBQAAAAABAAIAAAC2/CUDIgAAAAAAAQACAAAAbPTJBckFAAAAAAEAAgAAALz3MwYPAgAAAAABAAIAAACd/bQBrAAAAAAAAgAAAAAAJ47XcQAAAAAAAAEAAAAAAJD/bgAAAAAAAAACAAAAAAAr/tMBAAAAAAAAAgAAAAAAJ43XcgAAAAAAAAIAAQAAAKP2rQStBAAAAAAAAAAAAAD//wAAAAAAAAAAAgAAAAAA2IsmdAAAAAAAAAIAAQAAAKP2rQStBAAAAAACAAAAAAAnjddyAAAAAAAAAgAAAAAAf/9/AAAAAAAAAAIAAAAAACv+0wEAAAAAAAACAAAAAAD3/wcAAAAAAAAAAgAAAAAAKI3WcgAAAAAAAAIAAAAAACeO13EAAAAAAAABAAIAAAC89zMGDwIAAAAAAgAAAAAAK/7TAQAAAAAAAAEAAgAAAObpyQtOCgAAAAACAAAAAAD3/wcAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAEAAgAAAObpyQtOCgAAAAABAAIAAABs8TYIWwYAAAAAAQACAAAAvPczBg8CAAAAAAEAAgAAAGzxNghbBgAAAAACAAEAAADJ96wEiAMAAAAAAgAAAAAA5v8YAAAAAAAAAAEAAgAAAObpyQtOCgAAAAABAAAAAAD2iQh2AAAAAAAAAQAAAAAA5v8YAAAAAAAAAAIAAQAAAGzxNghbBgAAAAABAAAAAADoiRZ2AAAAAAAAAQACAAAA3O0RCREJAAAAAAEAAgAAAGzxNghbBgAAAAABAAAAAAC9iUF2AAAAAAAAAQACAAAA3O0RCREJAAAAAAIAAAAAAOb/GAAAAAAAAAABAAAAAADoiRZ2AAAAAAAAAQACAAAAbPTJBckFAAAAAAIAAQAAAGzxNghbBgAAAAABAAAAAADiiBx3AAAAAAAAAQAAAAAA9okIdgAAAAAAAAEAAgAAALb8JQMiAAAAAAACAAEAAABs8TYIWwYAAAAAAQACAAAAvu4PDDEFAAAAAAAAAAAAAP//AAAAAAAAAAABAAIAAAC+7g8MMQUAAAAAAAAAAAAA//8AAAAAAAAAAAEAAgAAALb8JQMiAAAAAAAAAAAAAAD//wAAAAAAAAAAAQACAAAA0PavBn4CAAAAAAIAAAAAACeO13EAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAAAAAIAAAAAANiLJnQAAAAAAQAAAAAAAAD//wAAAAAAAAAAAQAAAAAA6IkWdgAAAAACAAAAAAAAAP//AAAAAAAAAAACAAAAAAAnjtdxAAAAAAAAAQAAAAAAvYlBdgAAAAABAAAAAAAAAP//AAAAAAAAAAABAAAAAAD2iQh2AAAAAAEAAAAAAAAA//8AAAAAAAAAAAIAAAAAACiN1nIAAAAAAgAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAAAAAEAAAAAAL2JQXYAAAAAAAACAAAAAAAojdZyAAAAAAAAAgAAAAAAf/9/AAAAAAAAAAAAAAAAAP//AAAAAAAAAAACAAAAAADYiyZ0AAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAAABAAAAAADoiRZ2AAAAAAEAAAAAAAAA//8AAAAAAAAAAAIAAAAAANiLJnQAAAAAAgAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAAAAAEAAAAAAOKIHHcAAAAAAAABAAAAAADiiBx3AAAAAAEAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAAACAAAAAAAnjddyAAAAAAAAAgAAAAAAJ43XcgAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAAAAgAAAAAAKI3WcgAAAAABAAAAAAAAAP//AAAAAAAAAAABAAAAAAD2iQh2AAAAAA=="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 208,
"vertex_data": PackedByteArray("RnImvwdLZD8AAACAzMzMvkDJ+z7MzMy+zMzMvrdYpT/MzMw+zMzMvkDJ+z7MzMw+BM6uvcckej8/vBe/BM6uvUdxTj8/vBe/BM6uPcckej8/vBe/zMzMPkDJ+z7MzMy+BM6uPUdxTj8/vBe/zMzMPrdYpT/MzMy+RnImPwdLZD8AAACAzMzMPrdYpT/MzMw+zMzMvrdYpT/MzMw+zMzMPkDJ+z7MzMw+zMzMvkDJ+z7MzMy+zMzMvkDJ+z7MzMw+BM6uPUdxTj8/vBc/zMzMvkDJ+z7MzMw+BM6uPcckej8/vBc/BM6uvUdxTj8/vBc/BM6uvcckej8/vBc/zMzMvrdYpT/MzMw+BM6uvcckej8/vBc/U+20vthgnz8pAr4/BM6uvUdxTj8/vBc/U+20vl3UCT8pAr4/BM6uvcckej8/vBe/U+20Pthgnz8pAr6/BM6uPcckej8/vBe/U+20vthgnz8pAr6/BM6uPUdxTj8/vBc/U+20Pthgnz8pAr4/BM6uPcckej8/vBc/U+20Pl3UCT8pAr4/BM6uPcckej8/vBe/U+20Pl3UCT8pAr6/BM6uPUdxTj8/vBe/U+20Pthgnz8pAr6/U+20Pthgnz8pAr4/U+20Pl3UCT8pAr4/U+20vl3UCT8pAr4/U+20vthgnz8pAr4/U+20vthgnz8pAr6/U+20vl3UCT8pAr6/U+20Pl3UCT8pAr6/U+20Pthgnz8pAr6/BM6uPUdxTj8/vBe/U+20vl3UCT8pAr6/BM6uvUdxTj8/vBe/U+20Pl3UCT8pAr6/BM6uPcckej8/vBc/U+20vthgnz8pAr4/BM6uvcckej8/vBc/U+20Pthgnz8pAr4/BM6uvUdxTj8/vBc/U+20Pl3UCT8pAr4/BM6uPUdxTj8/vBc/U+20vl3UCT8pAr4/BM6uvUdxTj8/vBe/U+20vthgnz8pAr6/BM6uvcckej8/vBe/U+20vl3UCT8pAr6/RnImvwdLZD8AAACAzMzMvrdYpT/MzMy+5dP6vn3asD8AAACA5dP6vgdLZD/l0/q+opR3vgdLZD8DaqU/SiL7MAdLZD/DVZg/U+20vl3UCT8pAr4/U+20vthgnz8pAr4/zMzMPrdYpT/MzMw+5dP6Pn3asD8AAACA5dP6PgdLZD/l0/o+zMzMPkDJ+z7MzMy+Wh0+L01WRD+zmRy/AAAAACjCzT7l0/q+5dP6PgdLZD/l0/q+yqX/PQdLZD+zmRy/AAAAAHOHiz4AAACA5dP6PijCzT4AAACAAAAAACjCzT7l0/o+AAAAACppwT8AAACA5dP6vn3asD8AAACAAAAAAH3asD/l0/o+5dP6Pn3asD8AAACAAAAAAH3asD/l0/o+AAAAACppwT8AAACAAAAAACppwT8AAACAAAAAAH3asD/l0/q+5dP6Pn3asD8AAACAAAAAAH3asD/l0/q+5dP6vn3asD8AAACAzMzMvrdYpT/MzMy+AAAAACppwT8AAACA5dP6vijCzT4AAACAAAAAACjCzT7l0/o+AAAAAHOHiz4AAACAAAAAAHOHiz4AAACAAAAAACjCzT7l0/q+5dP6vijCzT4AAACAAAAAACjCzT7l0/q+5dP6PijCzT4AAACAAAAAAHOHiz4AAACAyqX/PQdLZD+zmRw/zMzMPrdYpT/MzMw+5dP6PgdLZD/l0/o+Wh0+r+Afgj+zmRw/AAAAAH3asD/l0/o+5dP6vgdLZD/l0/o+yqX/vQdLZD+zmRw/AAAAAH3asD/l0/o+Wh0+r+Afgj+zmRw/AAAAACjCzT7l0/o+5dP6PgdLZD/l0/o+zMzMPkDJ+z7MzMw+Wh0+r01WRD+zmRw/yqX/PQdLZD+zmRw/5dP6PijCzT4AAACA5dP6PgdLZD/l0/o+RnImPwdLZD8AAACAzMzMPkDJ+z7MzMw+zMzMPkDJ+z7MzMy+RnImPwdLZD8AAACA5dP6PgdLZD/l0/q+5dP6PijCzT4AAACA5dP6PgdLZD/l0/q+5dP6Pn3asD8AAACAzMzMPrdYpT/MzMy+RnImPwdLZD8AAACAyqX/vQdLZD+zmRy/zMzMvrdYpT/MzMy+5dP6vgdLZD/l0/q+Wh0+L+Afgj+zmRy/AAAAAH3asD/l0/q+5dP6PgdLZD/l0/q+yqX/PQdLZD+zmRy/AAAAAH3asD/l0/q+zMzMPrdYpT/MzMy+Wh0+L+Afgj+zmRy/AAAAACjCzT7l0/q+5dP6vgdLZD/l0/q+Wh0+L01WRD+zmRy/yqX/vQdLZD+zmRy/5dP6vijCzT4AAACA5dP6vgdLZD/l0/q+RnImvwdLZD8AAACAzMzMvkDJ+z7MzMy+RnImvwdLZD8AAACA5dP6vgdLZD/l0/o+5dP6vijCzT4AAACA5dP6vgdLZD/l0/o+5dP6vn3asD8AAACAyqX/PQdLZD+zmRw/opR3PgdLZD8DaqU/opR3vgdLZD8DaqU/yqX/vQdLZD+zmRw/07XhMKevij8DaqW/Wh0+L+Afgj+zmRy/opR3PgdLZD8DaqU/yqX/PQdLZD+zmRw/yqX/PQdLZD+zmRy/opR3PgdLZD8DaqW/yqX/vQdLZD+zmRy/opR3vgdLZD8DaqW/Wh0+r01WRD+zmRw/07XhMMA2Mz8DaqU/opR3PgdLZD8DaqW/yqX/PQdLZD+zmRy/Wh0+r01WRD+zmRw/AAAAACjCzT7l0/o+5dP6vgdLZD/l0/o+yqX/vQdLZD+zmRw/07XhMMA2Mz8DaqU/SiL7MAdLZD/DVZg/opR3PgdLZD8DaqU/SiL7MAdLZD/DVZg/U+20Pthgnz8pAr4/U+20Pl3UCT8pAr4/07XhMKevij8DaqU/SiL7MAdLZD/DVZg/opR3PgdLZD8DaqW/SiL7MAdLZD/DVZi/U+20Pl3UCT8pAr6/U+20Pthgnz8pAr6/07XhMMA2Mz8DaqW/SiL7MAdLZD/DVZi/opR3vgdLZD8DaqW/SiL7MAdLZD/DVZi/U+20vthgnz8pAr6/U+20vl3UCT8pAr6/07XhMKevij8DaqW/SiL7MAdLZD/DVZi/Wh0+L+Afgj+zmRy/07XhMKevij8DaqW/yqX/vQdLZD+zmRw/opR3vgdLZD8DaqU/07XhMMA2Mz8DaqW/Wh0+L01WRD+zmRy/Wh0+L01WRD+zmRy/07XhMMA2Mz8DaqW/07XhMKevij8DaqU/Wh0+r+Afgj+zmRw/Wh0+r+Afgj+zmRw/07XhMKevij8DaqU/07XhMMA2Mz8DaqU/Wh0+r01WRD+zmRw/opR3vgdLZD8DaqW/yqX/vQdLZD+zmRy/PzGfmH2ekfC2GLYY51b29T8xn5j8qIb1PzFfZ3ZmBu62GEjnQ3VQ67YYthiRq4b5SOdI5/CMNupQragWONmEyUjnthjKVzX7UK1W6QIXwdC/zp+YD1w686eWrtLGJoTJV2mu0gIXPK+nllAt/OjB0K5SqBb86DyvV2lQLTjZeba2mEhnDnM26khnSGcXd1zutpi2mFypoPpIZ0hnk4nk60hntphtVIb5SGe2mBep9vUgBxFi////vyAHEWL///+/IAftnf///78gB+2d////v0CTWdz///8/vmxZ3P///z++bFnc////P0CTWdz///8/3vjtnf///7/e+BFi////v974EWL///+/3vjtnf///78R4t94////PxHiH4f///8/EeIfh////z8R4t94////P/9/f1P/f7/p/39/rH+s////f3+sf6z///9/f1P/f7/pf9MAAH9T//9/0////3+/6X/T////f7/pf9MAAH9T//++bKUj////P0CTpSP///8/QJOlI////z++bKUj////P1lcvez///+/paO97P///7+lo73s////v1lcvez///+/paNBE////79ZXEET////v1lcQRP///+/paNBE////7/tHR+H////P+0d33j///8/7R3feP///z/tHR+H////P58YP7GImQbunxg/sYiZBu6fGD+x2p7A8J8YP7HvlIDrBqb/f/9//v8Gpv9//3/+/wam/39PvXLqBqb/f+ZUV+G/zp+YD1w687/On5iBYZHwv86fmAJXhvVI57YYRKOL+0jnthizVyn7SOe2GOJgwP9I57YYO6az+Ejnthg3Tmv2p5ZQLfzowdCnllAtkeTUzaeWUC307GLTV2mu0gIXPK9Xaa7SbRspsldprtIKE5ysp5au0qkg08unlq7SqSDTy6eWrtKqG7XNUK1W6QIXwdBQrVbpChNi01CtVultG9TNrlJW6akgK7SuUlbpqSArtK5SVunGJnm2rlJW6aobSLJXaVAtVd8rtFdpUC1V3yu0V2lQLVTkSLKuUqgW/Og8r65SqBb07JysrlKoFpHkKbJQragWVd/Ty1CtqBZV39PLUK2oFlTktc22mLaYIl3v+7aYtpjTXZj8tpi2mOdW9vW2mLaYS6gp+7aYtpgcn8D/SGe2mK5fJv9IZ7aYN05r9khntph8nyz/SGe2mOJgwP+2mEhnpYFA8LaYSGdOftbvtphIZxGUc+u2mEhng39w8LaYSGfYbBrnv85fZ1Sad+6/zl9nVJp37r/OX2fansDwv85fZ++UgOtf579O76M681/nv07vozrzX+e/TvyohvVf579OfZ6R8F/nP7GqZXfuX+c/sapld+5f5z+xD2uA61/nP7EkYcDwthhI5x+IkO62GEjnzIbo7rYYSOcRlHPrthhI51N22Ou2GEjng39w8EjnSOewgdbvSOdI5yeTGudI50jnWX5A8EjnSOfta3PrSOdI53uAcPC2GLYYgmAs/7YYthhQoCb/thi2GByfwP+2GLYYx7Fr9p8Yv07wXNTynxi/TvBc1PKfGL9OgWGR8J8Yv04CV4b1PzFfZ3ZmBu4/MV9nD2uA6z8xX2ckYcDwPzGfmA6j1PI/MZ+YDqPU8t74EWL///+/3vgRYv///78gBxFi////vyAHEWL///+/QJNZ3P///z9Ak1nc////P9747Z3///+/3vjtnf///78R4h+H////PxHiH4f///8/7R3feP///z/tHd94////P1lcQRP///+/WVxBE////78R4t94////PxHi33j///8/SGdIZ6uJ2OtIZ0hne4Bw8EhnSGdoceDsSGdIZyeTGuf/f3+sf6z///9/f6x/rP//+Fn/f/9////4Wf9//3////hZ/38Yq1fh+Fn/f69Ccur/f39T/3+/6f9/f1P/f7/pAAD42f9//v8AAPjZ/3/+/wAA+NnmVFfhAAD42U+9cup/0////3+/6X/T////f7/p///42f9///////jZ/3//////+NmvQnLq///42RirV+F/0wAAf1P//3/TAAB/U///vmxZ3P///z++bFnc////PyAH7Z3///+/IAftnf///7++bKUj////P75spSP///8/QJOlI////z9Ak6Uj////P1lcvez///+/WVy97P///7+lo73s////v6Wjvez///+/paNBE////7+lo0ET////v+0dH4f///8/7R0fh////z8=")
}]
blend_shape_mode = 0

[sub_resource type="Skin" id="Skin_dpjod"]
resource_name = "Skin"
bind_count = 3
bind/0/name = &"root"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.682244, 0)
bind/1/name = &"ALA_L"
bind/1/bone = -1
bind/1/pose = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, -0.778134, -0.882244)
bind/2/name = &"ALA_R"
bind/2/bone = -1
bind/2/pose = Transform3D(4.33126e-07, 1, 0, 0, 0, 1, 1, -4.33126e-07, 0, -0.882244, -0.816023, 3.82123e-07)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sihkx"]
_data = {
&"Volar": ExtResource("1_e4gwj"),
&"Volar y Atacar": ExtResource("2_7dmgp")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_7dmgp"]
radius = 0.693058

[node name="FlyingEnemy" type="Node3D"]
script = ExtResource("1_7dmgp")

[node name="Texturizado_Caramelo_Volador_002" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.884371, 0)

[node name="j_Caramelo_Volador" type="Node3D" parent="Texturizado_Caramelo_Volador_002"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.682244, 0)

[node name="Skeleton3D" type="Skeleton3D" parent="Texturizado_Caramelo_Volador_002/j_Caramelo_Volador"]
bones/0/name = "root"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "ALA_L"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.2, -0.778134)
bones/1/enabled = true
bones/1/position = Vector3(0, 0.2, -0.778134)
bones/1/rotation = Quaternion(-0.498732, 0, 0, 0.866756)
bones/1/scale = Vector3(1, 1, 1)
bones/2/name = "ALA_R"
bones/2/parent = 0
bones/2/rest = Transform3D(4.76837e-07, 0, 1, 1, 0, -4.76837e-07, 0, 1, 0, 0, 0.2, 0.816023)
bones/2/enabled = true
bones/2/position = Vector3(0, 0.2, 0.816023)
bones/2/rotation = Quaternion(0.343351, 0.618151, 0.343351, 0.618151)
bones/2/scale = Vector3(1, 1, 1)

[node name="Mesh_Caramelo_001" type="MeshInstance3D" parent="Texturizado_Caramelo_Volador_002/j_Caramelo_Volador/Skeleton3D"]
unique_name_in_owner = true
mesh = SubResource("ArrayMesh_phgpe")
skin = SubResource("Skin_dpjod")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Texturizado_Caramelo_Volador_002"]
libraries = {
&"": SubResource("AnimationLibrary_sihkx")
}
autoplay = "Volar y Atacar"
speed_scale = 0.5

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-1.39911, -1.15602, -1, 2.79822, 2.31205, 2)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_7dmgp")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
